@@ -7,6 +7,7 @@
 
 #include "finufft_common/common.h"
 #include "finufft_errors.h"
+
 // All indexing in library that potentially can exceed 2^31 uses 64-bit signed.
 // This includes all calling arguments (eg M,N) that could be huge someday.
 using BIGINT  = int64_t;
@@ -55,7 +56,7 @@ static inline void MY_OMP_SET_NUM_THREADS [[maybe_unused]] (int) {}
 #include <finufft/fft.h> // (must come after complex.h)
 #include <finufft_common/constants.h>
 #include <finufft_opts.h>
-#include <finufft_spread_opts.h>
+#include <finufft_common/spread_opts.h>
 
 // group together a bunch of type 3 rescaling/centering/phasing parameters:
 template<typename T> struct type3params {
