@@ -9,7 +9,7 @@
 #define SPREADINTERP_H
 
 #include <finufft/finufft_core.h>
-#include <finufft_spread_opts.h>
+#include <finufft_common/spread_opts.h>
 
 /* Note: the legacy TF_OMIT_* timing flags were removed. Timing helpers
     previously controlled by these flags have been purged from the codebase.
